--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,27 +16,12 @@
   align-items: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.logo {
+  margin-bottom: 1.5rem;
 }
 
 .title a {
-  color: #0070f3;
+  color: #8a85ff;
   text-decoration: none;
 }
 
@@ -60,15 +45,6 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -95,8 +71,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #8a85ff;
+  border-color: #8a85ff;
 }
 
 .card h3 {
@@ -110,8 +86,9 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
+.footnote {
+  color: gray;
+  margin-top: 3rem;
 }
 
 @media (max-width: 600px) {
