--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,50 +1,13 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.logo {
-  margin-bottom: 1.5rem;
-}
-
-.title a {
-  color: #8a85ff;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.footnote, .text {
   text-align: center;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+.footnote, .muted {
+  color: gray;
+}
+
+.footnote {
+  margin-top: 3rem;
 }
 
 .grid {
@@ -68,9 +31,7 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
+.card:hover, .card:focus, .card:active {
   color: #8a85ff;
   border-color: #8a85ff;
 }
@@ -80,15 +41,15 @@
   font-size: 1.5rem;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
+.card span {
+  font-size: 1rem;
   line-height: 1.5;
 }
 
-.footnote {
-  color: gray;
-  margin-top: 3rem;
+.card p {
+  margin: 1rem 0 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
 
 @media (max-width: 600px) {
