some responsive improvements

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -8,31 +8,34 @@
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 600px;
+  padding: 5rem 0;
 }
 
 .logo {
   margin-bottom: 1.5rem;
 }
 
-.title a {
-  color: #8a85ff;
-  text-decoration: none;
-}
-
-.title a:hover, .title a:focus, .title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+
+  & a {
+    color: #8a85ff;
+    text-decoration: none;
+
+    &:hover,
+    &:focus,
+    &:active {
+      text-decoration: underline;
+    }
+  }
 }
 
 .title, .description {
