--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -1,5 +1,11 @@
 .form {
-  width: 100%;
+  max-width: 400px;
+}
+
+@media (max-width: 600px) {
+  .form {
+    max-width: 100%;
+  }
 }
 
 .control {
@@ -17,11 +23,13 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-}
 
-.input:hover, .input:focus, .input:active {
-  color: #8a85ff;
-  border-color: #8a85ff;
+  &:hover,
+  &:focus,
+  &:active {
+    color: #8a85ff;
+    border-color: #8a85ff;
+  }
 }
 
 .button {
