--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -21,15 +21,15 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid var(--color-gray5);
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 
   &:hover,
   &:focus,
   &:active {
-    color: #8a85ff;
-    border-color: #8a85ff;
+    color: var(--color-primary);
+    border-color: var(--color-primary);
   }
 
   h3 {
@@ -54,7 +54,7 @@
 }
 
 .footnote, .muted {
-  color: gray;
+  color: var(--color-gray);
 }
 
 .footnote {
