--- a/styles/versions.module.scss
+++ b/styles/versions.module.scss
@@ -9,11 +9,11 @@
   padding: 18px;
 }
 
-.table tr:nth-child(even) {
+.table tbody tr:nth-child(even) {
   background-color: var(--color-gray6);
 }
 
-.table tr:nth-child(odd) {
+.table tbody tr:nth-child(odd) {
   background-color: var(--color-gray5);
 }
 
