new: blue accent color scheme

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,7 @@
 :root {
   --color-background: #ffffff;
   --color-text: #000000;
-  --color-primary: #8a85ff;
+  --color-primary: #455789;
   --color-gray: #8E8E93;
   --color-gray5: #E5E5EA;
   --color-gray6: #F2F2F7;
@@ -11,6 +11,7 @@
   :root {
     --color-background: #000000;
     --color-text: #ffffff;
+    --color-primary: #759AFF;
     --color-gray5: #2C2C2E;
     --color-gray6: #1C1C1E;
   }
